--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -269,8 +269,8 @@
         sign: sign
       },
       success: function(data) {
-        // callback(data.trans_result[0]["dst"]);
-        callback(data);
+        callback(data.trans_result[0]["dst"]);
+        // callback(data);
       }
     });
   };
