--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -1,5 +1,5 @@
-<script src="js/jquery.min.js"></script>
-<script type="text/JavaScript"  src="js/md5.js"></script>
+<script src="./js/jquery.min.js"></script>
+<script src="./js/md5.js"></script>
 
 <script>
   var MD5 = function(string) {
