修改测试链接6

--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -273,7 +273,7 @@
         salt: salt,
         from: from,
         to: tar,
-        sign: sign
+        sign: hash
       },
       success: function(data) {
         callback(data.trans_result[0]["dst"]);
