修改测试链接8

--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -276,8 +276,8 @@
         sign: hash
       },
       success: function(data) {
-        callback(data.trans_result[0]["dst"]);
-        // callback(data);
+        // callback(data.trans_result[0]["dst"]);
+        callback(data);
       }
     });
   };
