修改测试链接9

--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -265,7 +265,7 @@
     $.ajax({
       url: "https://api.fanyi.baidu.com/api/trans/vip/translate",
       async: true,
-      type: "post",
+      type: "get",
       dataType: "jsonp",
       data: {
         q: query,
