修改测试链接9

--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -242,7 +242,7 @@
     for (var i = 0; i < vars.length; i++) {
       var pair = vars[i].split("=");
       if (pair[0] == variable) {
-        return pair[1];
+        return decodeURIComponent(pair[1]);
       }
     }
     return null;
@@ -251,6 +251,7 @@
   var translate = function(tar, query, callback) {
     var appid = "20190906000332471";
     var key = "X4wgwMaf7bVZIqBz9Kv7";
+
     // var salt = new Date().getTime();
     var salt = Math.floor(Math.random()*(65536-32768+1)+32768);
     var from = "auto";
