--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -243,7 +243,7 @@
     for (var i = 0; i < vars.length; i++) {
       var pair = vars[i].split("=");
       if (pair[0] == variable) {
-        return decodeURIComponent(base64.encode(decodeURIComponent(pair[1])));
+        return decodeURIComponent($.base64.encode(decodeURIComponent(pair[1])));
       }
     }
     return null;
