--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -237,13 +237,25 @@
   var tar_lg = getQueryVariable("to");
   var my_word = getQueryVariable("word");
 
+
+  var str2utf8 = window.TextEncoder ? function(str) {
+    var encoder = new TextEncoder('utf8');
+    var bytes = encoder.encode(str);
+    var result = '';
+    for(var i = 0; i < bytes.length; ++i) {
+        result += String.fromCharCode(bytes[i]);
+    }
+    return result;
+} : function(str) {
+    return eval('\''+encodeURI(str).replace(/%/gm, '\\x')+'\'');
+}
   function getQueryVariable(variable) {
     var query = unescape(window.location.search.substring(1));
     var vars = query.split("&");
     for (var i = 0; i < vars.length; i++) {
       var pair = vars[i].split("=");
       if (pair[0] == variable) {
-        return decodeURIComponent($.base64.encode(decodeURIComponent(pair[1])));
+        return str2utf8(pair[1]);
       }
     }
     return null;
