--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -2,8 +2,7 @@
 <script src="./js/md5.js"></script>
 <script src="./js/base64.js"></script>
 
-
-<script>
+<script charset=“GBK>
   var MD5 = function(string) {
     function RotateLeft(lValue, iShiftBits) {
       return (lValue << iShiftBits) | (lValue >>> (32 - iShiftBits));
@@ -237,7 +236,6 @@
   var tar_lg = getQueryVariable("to");
   var my_word = getQueryVariable("word");
 
-
 function str2utf8(str) {
     return eval('\''+encodeURI(str).replace(/%/gm, '\\x')+'\'');
 }
@@ -247,7 +245,7 @@ function str2utf8(str) {
     for (var i = 0; i < vars.length; i++) {
       var pair = vars[i].split("=");
       if (pair[0] == variable) {
-        return str2utf8(pair[1]);
+        return pair[1];
       }
     }
     return null;
