修改测试链接10

--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -2,7 +2,7 @@
 <script src="./js/md5.js"></script>
 <script src="./js/base64.js"></script>
 
-<script charset=“GBK>
+<script charset=“utf-8>
   var MD5 = function(string) {
     function RotateLeft(lValue, iShiftBits) {
       return (lValue << iShiftBits) | (lValue >>> (32 - iShiftBits));
