--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -241,7 +241,7 @@ function str2utf8(str) {
 }
   function getQueryVariable(variable) {
     var query = unescape(window.location.search.substring(1));
-    console.log('0='+query)
+    console.log('0='+encodeURI(encodeURI(query)))
     var vars = query.split("&");
     for (var i = 0; i < vars.length; i++) {
       var pair = vars[i].split("=");
