--- a/CustomBaiduTranslateApi/index.html
+++ b/CustomBaiduTranslateApi/index.html
@@ -278,7 +278,7 @@ function str2utf8(str) {
         salt: salt,
         from: from,
         to: tar,
-        sign: hash
+        sign: sign
       },
       success: function(data) {
         callback(data.trans_result[0]["dst"]);
